--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -167,15 +167,15 @@ Related to this, the variables being decided on are the gate times of the tasks,
 
 This leads me to a major limitation of this research. While the monetary value of the project is presented as the main focus, there is no mention of any postive cashflow starting when the project is partly done, nor are there any deadlines for milestones mentioned (such as when the first 10\% or 50\% of the turbines are operational). Therefore the only postive value considered in the objective is the fixed value of the project upon completion, subject to discount rates. For research so focussed on the financial perspecitve, not incorporating the possibility of early positive cashflows seems like a big gap, and a possible improvement for future research.
 
-The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and months to totally halt all execution are identified. Since there is only a binary value to be determined for each month there are only $12^2 = 144$ possible variations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. 
+The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and months to totally halt all execution are identified. Since there is only a binary value to be determined for each month there are only $12^2 = 144$ possible variations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
 
-%Talk about limitations of conversion algorithm (between MAT/SAT and Gate genes)
+Another limitation of this paper are the genes, which are fairly high level. They determine which (category of) tasks can be performed in which month, but determining the schedule on a more detailed timescale can likely lead to much better results. A conversion algorithm is used to generate gate times for each task based on any given chromosome, but it is very simplistic. Every task is placed immedately after all preceding tasks should be completed if there are no weather delays. This is then tested with a single simulation, and if any task executions violate the given chormosome the gate time of that task is shifted forward to the next eligble period. This seems like a very simplistic method to use (as the genes operate on a much larger timescale than the gate times) and leads me to think improvement might be very beneficial.
 
-%Talk about weather model
+The final thing to note about this research is the advanced weather simulation model used for the simulation. It uses a combination of transition probability matrices and a Weibull distribution to generate wind speeds and wave heights that are both sufficiently correlated to each other and themselves. The data this is based on was divided by month of the year, so the model takes time of year into account. Given the degree to which this type of project depends on the weather conditions, a realistic and sophisticated model like this is beneficial for the applicability of the model. 
 
 \bigskip
 
-FOR SOME OF THE PAPERS LISTED BELOW I HAVE THE NOTES ABOUT WHAT I WANT TO SAY BUT I HAVE NOT YET WRITTEN IT DOWN. THEY WILL BE SHORTER THAN WHAT I DID FOR THE PREVIOUS PAPER BUT I TRY TO GET TO THE HEART OF THE MODELS USED AND THE LITERATURE CONTRIBUTIONS AND GAPS
+FOR SOME OF THE PAPERS LISTED BELOW I HAVE THE NOTES ABOUT WHAT I WANT TO SAY BUT I HAVE NOT YET WRITTEN IT DOWN. THEY WILL BE SHORTER THAN WHAT I DID FOR THE PREVIOUS PAPERS BUT I TRY TO GET TO THE HEART OF THE MODELS USED AND THE LITERATURE CONTRIBUTIONS AND GAPS
 
 \cite{barlow2017using}
 
