--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -169,3 +169,12 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@incollection{cotta2007memetic,
+  title={Memetic algorithms in planning, scheduling, and timetabling},
+  author={Cotta, Carlos and Fern{\'a}ndez, Antonio J},
+  booktitle={Evolutionary Scheduling},
+  pages={1--30},
+  year={2007},
+  publisher={Springer}
+}
